--- a/client/src/CSS/Ajax.css
+++ b/client/src/CSS/Ajax.css
@@ -1,3 +1,7 @@
+.Ajax-article-cards a:hover {
+    color:black;
+}
+ 
  @media only screen and (min-width: 1101px) {
      .Ajax-wrapper {
          display: grid;
