--- a/client/src/CSS/DeGouw.css
+++ b/client/src/CSS/DeGouw.css
@@ -1,3 +1,10 @@
+.DeGouw-championship-cards a:hover {
+    color:black;
+}
+.DeGouw-other-cards a:hover {
+    color:black;
+}
+
 @media only screen and (min-width: 1101px) {
     .DeGouw-wrapper img {
         width: 100%;
