--- a/client/src/CSS/ITProjects.css
+++ b/client/src/CSS/ITProjects.css
@@ -20,7 +20,7 @@
     .projects img {
         min-height: 286px;
         width: 100%;
-        border-radius: 10%;
+        /* border-radius: 10%; */
         border-style: solid;
         border-width: 1px;
         border-color: blue;
