--- a/client/src/CSS/ITProjects.css
+++ b/client/src/CSS/ITProjects.css
@@ -1,6 +1,4 @@
-.project-contents-wrapper{
-    padding:2%;
-}
+
 
 
 .projects img {
@@ -8,6 +6,13 @@ border-color:teal;
 }
 
 @media only screen and (min-width: 1101px) {
+    .small-devices {
+        display:none;
+    }
+
+    .mobile-configuration {
+     display:none;   
+    }
 
     .projects-wrapper {
         display: flex;
@@ -24,7 +29,9 @@ border-color:teal;
         padding-bottom: 2%;
     }
 
-
+    .project-contents-wrapper{
+        padding:2%;
+    }
 
     .projects img {
         min-height: 300px;
@@ -112,51 +119,80 @@ border-color:teal;
 
 
 @media only screen and (min-width: 768px) and (max-width: 1100px) {
-    .flip-box-inner-desktop-configuration {
-        display:none;
+    .big-devices {
+        display: none;
     }
 
-        .projects-wrapper {
-        display: flex;
-        /* flex-direction: row; */
-        justify-content: center;
-        flex-wrap: wrap;
-        height: auto;
+    .small-devices {
+        height:100%;
+        display:grid;
+        grid-template-rows: 10% 90% ;
+    }
 
+    .desktop-configuration {
+        display:none;
+    }
+    .mobile-configuration a:hover {
+        color: #00008B;
+    }
+
+    .project-title.mobile-configuration {
+        padding:2%;
+    }
+
+    .project-contents-wrapper{
+        width:100%;
+           
+    }
+
+    .projects-wrapper {
+        
+        height: auto;
+        padding-top: 2%;
         border-style: solid;
         border-width: 2px;
         border-color: teal;
         background-color: white;
-        padding-top: 2%;
-        padding-bottom: 2%;
+
+
     }
 
 
 
     .projects img {
-
         width: 100%;
+        min-height: 300px;
+        max-height:50px;
         border-style: solid;
         border-width: 1px;
    
+
+
+    }
+    .flip-box-inner-desktop-configuration {
+        display:none;
     }
 
 
-    .flip-box {
-        height: 100%;
-        width: 30%;
-        padding: 2%
+
+    .flip-box-back-text-div {
+        padding:1%;
+        min-height: 300px;
+        max-height:550px;
     }
+
+
 
     .flip-box:hover {
         background-color: cadetblue;
-        border-radius: 10%;
-
+      
     }
 
     .project-title {
-        font-size: 125%;
-    }
+        font-size: 100%;
+        grid-row-start: 1;
+        grid-row-end:2;
+            }
 
     .project-title a {
         color:black;
@@ -169,36 +205,50 @@ border-color:teal;
 
     .flip-box {
         background-color: transparent;
-        width: 400px;
-        height: 300px;
+
         border: 1px solid #f1f1f1;
         perspective: 1000px;
-        margin-bottom: 5%;
+        min-height: 300px;
+        max-height:550px;
+        grid-row-start: 2;
+        grid-row-end: 3;
     }
 
     .flip-box-inner {
         position: relative;
+        min-height: 300px;
+        max-height:550px;
         width: 100%;
-        height: 100%;
-        text-align: center;
+         text-align: center;
         transition: transform 0.8s;
         transform-style: preserve-3d;
     }
 
     .flip-box:hover .flip-box-inner {
         transform: rotateY(180deg);
+                min-height: 300px;
+        max-height:550px;
 
     }
 
     .flip-box-front,
     .flip-box-back {
         position: absolute;
-        padding: 2%;
-        width: 100%;
-        height: 100%;
+        min-height: 300px;
+        max-height:550px;
+       width: 100%;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
         text-align: left;
+
+    }
+
+
+    .flip-box-back {
+        min-height: 300px;
+        max-height:550px;
+        font-size:85%;
+
     }
 
 
@@ -222,15 +272,34 @@ border-color:teal;
 
 @media only screen and (max-width: 767px) {
 
+    .big-devices {
+        display: none;
+    }
+
+    .small-devices {
+        height:100%;
+        display:grid;
+        grid-template-rows: 10% 90% ;
+    }
+
+    .desktop-configuration {
+        display:none;
+    }
+    .mobile-configuration a:hover {
+        color: #00008B;
+    }
+
+    .project-title.mobile-configuration {
+        padding:2%;
+    }
+
     .project-contents-wrapper{
         width:100%;
+           
     }
 
     .projects-wrapper {
-        /* display: flex;
-        flex-direction: row; */
-        /* justify-content: center;
-        flex-wrap: wrap; */
+        
         height: auto;
         padding-top: 2%;
         border-style: solid;
@@ -244,8 +313,9 @@ border-color:teal;
 
 
     .projects img {
-        max-width: 100%;
-        height:300px;
+        width: 100%;
+        min-height: 300px;
+        max-height:50px;
         border-style: solid;
         border-width: 1px;
    
@@ -257,12 +327,14 @@ border-color:teal;
     }
 
 
-    .flip-box {
-        height: 100%;
-        width: 100%;
-        /* padding: 2%; */
 
+    .flip-box-back-text-div {
+        padding:2%;
+        min-height: 300px;
+        max-height:550px;
     }
+
+
 
     .flip-box:hover {
         background-color: cadetblue;
@@ -271,6 +343,8 @@ border-color:teal;
 
     .project-title {
         font-size: 100%;
+        grid-row-start: 1;
+        grid-row-end:2;
             }
 
     .project-title a {
@@ -284,32 +358,38 @@ border-color:teal;
 
     .flip-box {
         background-color: transparent;
-        /* width: 400px; */
-        height: 300px;
+
         border: 1px solid #f1f1f1;
         perspective: 1000px;
+        min-height: 300px;
+        max-height:550px;
+        grid-row-start: 2;
+        grid-row-end: 3;
     }
 
     .flip-box-inner {
         position: relative;
+        min-height: 300px;
+        max-height:550px;
         width: 100%;
-        height: 100%;
-        text-align: center;
+         text-align: center;
         transition: transform 0.8s;
         transform-style: preserve-3d;
     }
 
     .flip-box:hover .flip-box-inner {
         transform: rotateY(180deg);
+                min-height: 300px;
+        max-height:550px;
 
     }
 
     .flip-box-front,
     .flip-box-back {
         position: absolute;
-        
-        width: 100%;
-        height: 100%;
+        min-height: 300px;
+        max-height:550px;
+       width: 100%;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
         text-align: left;
@@ -318,7 +398,8 @@ border-color:teal;
 
 
     .flip-box-back {
-            
+        min-height: 300px;
+        max-height:550px;
         font-size:85%;
 
     }
@@ -339,4 +420,7 @@ border-color:teal;
         color: white;
         transform: rotateY(180deg);
     }
+
+
+    
 }
